# chiaki-funsol

./: .gitignore  CMakeLists.txt  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/metallic/chiaki/main/: MainActivity.kt
android/app/src/main/java/com/metallic/chiaki/regist/: RegistActivity.kt
